--- a/ui/package.json
+++ b/ui/package.json
@@ -47,6 +47,7 @@
     "d3-shape": "^1.2.0",
     "d3-time-format": "^2.1.0",
     "d3-transition": "^1.1.0",
+    "duration-js": "^4.0.0",
     "ember-ajax": "^5.0.0",
     "ember-auto-import": "^1.2.21",
     "ember-cli": "~3.12.0",
